force-app/main/default/objects/ampi__Indicator__c/ampi__Indicator__c.object-meta.xml
<CustomObject>
    <description>Catalog indicators that can be used to track progress against goals for a range of projects</description>
    <label>Indicator</label>
    <nameField>
        <displayFormat>IND-{00000}</displayFormat>
        <label>Indicator ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>