force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Active__c.field-meta.xml
<CustomField>
    <fullName>ampi__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox field to specify if Indicator record is active</description>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>