force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Aim__c.field-meta.xml
<CustomField>
    <fullName>ampi__Aim__c</fullName>
    <description>Picklist field to specify whether the aim should be to increase or decrease the target and result values for this indicator</description>
    <label>Aim</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increase</fullName>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>