force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Aim_Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__Aim_Icon__c</fullName>
    <description>TThis field provides the class name of the icon which will be displayed as well as the label of the icon when the user is hovering over the icon.</description>
    <formula>IF( TEXT(ampi__Aim__c) = &apos;Increase&apos; , &apos;vi-arrow-circle-up&apos; , IF( TEXT(ampi__Aim__c) = &apos;Decrease&apos; , &apos;vi-arrow-circle-down&apos; , &apos;&apos; ))&amp;&quot;#&quot;&amp;text(ampi__Aim__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aim</label>
    <type>Text</type>
</CustomField>