force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Calculate_Total__c.field-meta.xml
<CustomField>
    <fullName>ampi__Calculate_Total__c</fullName>
    <description>This picklist field is to specify if total for disaggregated results should be calculated</description>
    <label>Calculate Total</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sum Total</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Sum Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>