force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Cross_Disaggregation_by_Sex__c.field-meta.xml
<CustomField>
    <fullName>ampi__Cross_Disaggregation_by_Sex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to specify if the targets and results for this indicator are cross disaggregated by sex</description>
    <label>Cross-Disaggregation by Sex</label>
    <type>Checkbox</type>
</CustomField>