force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Cumulative__c.field-meta.xml
<CustomField>
    <fullName>ampi__Cumulative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to indicate if this indicator should be cumulated across reporting periods (i.e. the Target/Result for the most recent Reporting Period includes the Target/Result from the previous reporting period).</description>
    <label>Cumulative?</label>
    <type>Checkbox</type>
</CustomField>