force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Data_Source__c.field-meta.xml
<CustomField>
    <fullName>ampi__Data_Source__c</fullName>
    <description>This text field is to specify the data source used to report results on this indicator</description>
    <label>Data Source</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>