force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Data_Type__c</fullName>
    <description>Picklist field to specify the type of data used to set targets or report results on this indicator.</description>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Qualitative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>