force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description__c</fullName>
    <description>Text field to define/name the Indicator</description>
    <label>Indicator Definition</label>
    <type>TextArea</type>
</CustomField>