force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Description_Language_1__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description_Language_1__c</fullName>
    <description>Primary translated version of Description__c. This value is printed in Description_Translated__c when USER_LANGUAGE_CODE = 1.</description>
    <label>Indicator Definition Language 1</label>
    <type>TextArea</type>
</CustomField>