force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Description_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description_Language_2__c</fullName>
    <description>Secondary translated version of Description__c. This value is printed in Description_Translated__c when USER_LANGUAGE_CODE = 2.</description>
    <label>Indicator Definition Language 2</label>
    <type>TextArea</type>
</CustomField>