force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Description_Translated__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description_Translated__c</fullName>
    <description>Formula field to return a translated version of Description__c if user is using Salesforce in a different language. Depending on user’s language locale, can return Description__c, Description_Language_1__c, Description_Language_2__c, or Description_Language_3__c. Displayed in ManageIndicators, SetTargets, and AddResults.</description>
    <formula>CASE($Label.ampi__USER_LANGUAGE_CODE,
    &apos;1&apos;, BLANKVALUE(ampi__Description_Language_1__c, ampi__Description__c),
    &apos;2&apos;, BLANKVALUE(ampi__Description_Language_2__c, ampi__Description__c),
    &apos;3&apos;, BLANKVALUE(ampi__Description_Language_3__c, ampi__Description__c),
    ampi__Description__c
)</formula>
    <label>Indicator Definition Translated</label>
    <type>Text</type>
</CustomField>