force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Disaggregation_Group__c.field-meta.xml
<CustomField>
    <fullName>ampi__Disaggregation_Group__c</fullName>
    <description>This text field is used to define the groupings by which a particular Indicator is disaggregated. When utilized on the ManageIndicators page, it is displayed as a single-select picklist. Only one disaggregation group can be used per Indicator.</description>
    <label>Disaggregation Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>