force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Disaggregation_Group_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__Disaggregation_Group_Language_2__c</fullName>
    <description>Secondary translated version of Disaggregation_Group__c. This value is printed in Disaggregation_Group_Translated__c when USER_LANGUAGE_CODE = 2.</description>
    <label>Disaggregation Group Language 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>