force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Exclude_From_IATI__c.field-meta.xml
<CustomField>
    <fullName>ampi__Exclude_From_IATI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to indicate whether or not this indicator should be excluded from IATI</description>
    <inlineHelpText>Check this box if this indicator should be excluded from IATI</inlineHelpText>
    <label>Exclude from IATI</label>
    <type>Checkbox</type>
</CustomField>