force-app/main/default/objects/ampi__Indicator__c/fields/ampi__External_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__External_Code__c</fullName>
    <description>Text field to store the unique code of an indicator from a standard library (i.e. SDG Framework, IRIS)</description>
    <inlineHelpText>Enter the ID from an external organization for this indicator.</inlineHelpText>
    <label>External Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>