force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Geographical_Disaggregation__c.field-meta.xml
<CustomField>
    <fullName>ampi__Geographical_Disaggregation__c</fullName>
    <description>Picklist field to specify the geographic disaggregation of Indicator</description>
    <label>Geographical Disaggregation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Programme</fullName>
            </value>
            <value>
                <fullName>Programme Unit</fullName>
            </value>
            <value>
                <fullName>Custom Area</fullName>
                <isActive>false</isActive>
                <label>Custom Area</label>
            </value>
            <value>
                <fullName>District</fullName>
                <isActive>false</isActive>
                <label>District</label>
            </value>
            <value>
                <fullName>Neighbourhood/Village/City</fullName>
                <isActive>false</isActive>
                <label>Neighbourhood/Village/City</label>
            </value>
            <value>
                <fullName>Region</fullName>
                <isActive>false</isActive>
                <label>Region</label>
            </value>
            <value>
                <fullName>State/Province</fullName>
                <isActive>false</isActive>
                <label>State/Province</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>