force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Guideline__c.field-meta.xml
<CustomField>
    <fullName>ampi__Guideline__c</fullName>
    <description>Long text field to provide guidelines on how to track or report indicator</description>
    <label>Guidelines</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>