force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Guideline_Language_1__c.field-meta.xml
<CustomField>
    <fullName>ampi__Guideline_Language_1__c</fullName>
    <description>Primary translated version of Guideline__c.</description>
    <label>Guidelines Language 1</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>