force-app/main/default/objects/ampi__Indicator__c/fields/ampi__IATI_Aggregation_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Aggregation_Status__c</fullName>
    <description>Boolean flag indicating whether the data in the result set are suitable for aggregation.</description>
    <formula>IF (AND ((ampi__Cumulative__c = FALSE), OR ((TEXT(ampi__Data_Type__c) = &quot;Number&quot;), (TEXT(ampi__Data_Type__c) = &quot;Currency&quot;))),TRUE, FALSE)</formula>
    <inlineHelpText>Boolean flag indicating whether the data in the result set are suitable for aggregation.</inlineHelpText>
    <label>IATI Aggregation Status</label>
    <type>Checkbox</type>
</CustomField>