force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Include_In_Catalog__c.field-meta.xml
<CustomField>
    <fullName>ampi__Include_In_Catalog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to include an indicator in the indicator catalog for all projects</description>
    <inlineHelpText>Check this field if this project indicator should be available in the Indicator Catalog which is visible for all Projects. This field is checked by default when creating a new project indicator.</inlineHelpText>
    <label>Include In Catalog?</label>
    <type>Checkbox</type>
</CustomField>