force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Indicator_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__Indicator_Code__c</fullName>
    <description>Text field to store the unique code of an indicator used internally by an organization</description>
    <inlineHelpText>Enter the unique ID your organization uses internally for this indicator.</inlineHelpText>
    <label>Indicator Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>