force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Indicator_Level__c.field-meta.xml
<CustomField>
    <fullName>ampi__Indicator_Level__c</fullName>
    <description>Picklist field to specify the level indicator is tracking i.e. whether this indicator is tracking impact or progress</description>
    <label>Indicator Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Outcome</fullName>
            </value>
            <value>
                <fullName>Output</fullName>
            </value>
            <value>
                <fullName>Objective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>