force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Indicator_Library__c.field-meta.xml
<CustomField>
    <fullName>ampi__Indicator_Library__c</fullName>
    <description>Picklist field to specify the indicator liberary (e.g. SDG or IRIS) this indicator belongs to</description>
    <label>Indicator Library</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SDG</fullName>
            </value>
            <value>
                <fullName>IRIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>