force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Notes__c.field-meta.xml
<CustomField>
    <fullName>ampi__Notes__c</fullName>
    <description>Long text field to provide additional information / comments for this indicator. This field is populated by the Comment popup on ManageIndicators.</description>
    <label>Notes</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>