force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Objective__c.field-meta.xml
<CustomField>
    <fullName>ampi__Objective__c</fullName>
    <description>Long text field to store comma-separated objectives related to this indicator</description>
    <label>Objective(s)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>