force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Objective_Language_1__c.field-meta.xml
<CustomField>
    <fullName>ampi__Objective_Language_1__c</fullName>
    <description>Primary translated version of Objective__c.</description>
    <label>Objective(s) Language 1</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>