force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Parent_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Indicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-lookup field to create a hierarchy of catalog indicators</description>
    <label>Parent Indicator</label>
    <referenceTo>ampi__Indicator__c</referenceTo>
    <relationshipLabel>Sub-Indicators</relationshipLabel>
    <relationshipName>Child_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>