force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to relevant project record if the indicator is only added to a specific project and not the indicator catalog</description>
    <label>Specific Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Indicators</relationshipLabel>
    <relationshipName>Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>