force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Reporting_Currency__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Currency__c</fullName>
    <description>Picklist field to specify the reporting currency if Indicator data type is currency</description>
    <label>Reporting Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__Currency</valueSetName>
    </valueSet>
</CustomField>