force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Reporting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Frequency__c</fullName>
    <description>Picklist field to set the frequency at which either only results or results and targets are reported.</description>
    <inlineHelpText>Use this field to set the frequency at which either only results or results and targets are reported.</inlineHelpText>
    <label>Reporting Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Life of Project</fullName>
            </value>
            <value>
                <fullName>--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>