force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Targets_Are_Disaggregated__c.field-meta.xml
<CustomField>
    <fullName>ampi__Targets_Are_Disaggregated__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to mark whether targets should be disaggregated at the same level as results. If FALSE, then only one value is entered for targets at any particular target frequency and geographic disaggregation combination.</description>
    <inlineHelpText>Check this box if targets are tracked at the same disaggregation levels (i.e. by sex and/or custom disaggregation level) as results. Leave this box blank if targets are not tracked with any level of disaggregation.</inlineHelpText>
    <label>Targets Are Disaggregated?</label>
    <type>Checkbox</type>
</CustomField>