force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Thematic_Area_Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area_Icon__c</fullName>
    <description>Trigger concatenates all the Name fields of Thematic Areas which have a child Indicator Thematic Area with the Indicator. If the organization is using icons, this field is used to display the icon of the Thematic Areas on the Manage Indicators page.</description>
    <label>Thematic Area</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>