force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Thematic_Area_Ids__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area_Ids__c</fullName>
    <description>Trigger concatenates all IDs of Thematic Areas which have a child Indicator Thematic Area with the Indicator. This is used when filtering Indicators on the ManageIndicators page -- all Indicator records with the selected Thematic Area ID in this field will be shown in results.</description>
    <label>Thematic Area Ids</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>