force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Type__c</fullName>
    <description>Picklist to specify the type of indicator.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>