force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Type_of_Results__c.field-meta.xml
<CustomField>
    <fullName>ampi__Type_of_Results__c</fullName>
    <description>Picklist to specify how the results are being generated, i.e. inputted, aggregated over source records, or calculated using the results from other indicators</description>
    <label>Type of Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input</fullName>
                <default>true</default>
                <label>Input</label>
            </value>
            <value>
                <fullName>Aggregated</fullName>
            </value>
            <value>
                <fullName>Calculated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>