force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Units__c.field-meta.xml
<CustomField>
    <fullName>ampi__Units__c</fullName>
    <description>Text field to specify the units of measurement for this indicator</description>
    <label>Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>