force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Units_Language_1__c.field-meta.xml
<CustomField>
    <fullName>ampi__Units_Language_1__c</fullName>
    <description>Primary translated version of Units__c. This value is printed in Units_Translated__c when USER_LANGUAGE_CODE = 1.</description>
    <label>Units Language 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>