force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Units_Translated__c.field-meta.xml
<CustomField>
    <fullName>ampi__Units_Translated__c</fullName>
    <description>Formula field to return a translated version of Units__c if user is using Salesforce in a different language. Depending on user’s language locale, can return Units__c, Units_Language_1__c, Units_Language_2__c, or Units_Language_3__c. Displayed in ManageIndicators, SetTargets, and AddResults.</description>
    <formula>CASE($Label.ampi__USER_LANGUAGE_CODE,
    &apos;1&apos;, BLANKVALUE(ampi__Units_Language_1__c, ampi__Units__c),
    &apos;2&apos;, BLANKVALUE(ampi__Units_Language_2__c, ampi__Units__c),
    &apos;3&apos;, BLANKVALUE(ampi__Units_Language_3__c, ampi__Units__c),
    ampi__Units__c
)</formula>
    <label>Units Translated</label>
    <type>Text</type>
</CustomField>