force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Validation_Range_Minimum__c.field-meta.xml
<CustomField>
    <fullName>ampi__Validation_Range_Minimum__c</fullName>
    <description>Number field to specify the minimum limit of validation range for a quantitative indicator</description>
    <label>Validation Range Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>