force-app/main/default/objects/ampi__Indicator__c/fields/ampi__Yellow_Green_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ampi__Yellow_Green_Threshold__c</fullName>
    <defaultValue>1.0</defaultValue>
    <description>A default value for this field can be set by the organisation and the help text can be updated accordingly.</description>
    <inlineHelpText>The percent of this indicator&apos;s target value that the result value must meet or surpass in order for the stoplight to turn from yellow to green.</inlineHelpText>
    <label>% Threshold Between Yellow and Green</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>