force-app/main/default/objects/ampi__Indicator__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Care</fullName>
            </value>
            <value>
                <fullName>Family Strengthening</fullName>
            </value>
            <value>
                <fullName>Humanitarian Action</fullName>
            </value>
            <value>
                <fullName>Other Activities</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Care</fullName>
            </value>
            <value>
                <fullName>Family of Origin</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Livelihood</fullName>
            </value>
            <value>
                <fullName>Protection and Social Inclusion</fullName>
            </value>
            <value>
                <fullName>Wellbeing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>