force-app/main/default/objects/ampi__Indicator__c/fields/Care_Promise_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Care_Promise_Indicator__c</fullName>
    <label>Care Promise Indicator?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>